fix login logic

--- a/views/app/auth/login_user.pug
+++ b/views/app/auth/login_user.pug
@@ -23,7 +23,7 @@ block content
 
                     .container
                         .row
-                            form.col.s12(action="/api/user/create", method="post")
+                            form.col.s12(action="/api/user/login", method="post")
                                 .container
                                 .row
                                     .col.s12
