--- a/views/app/notices/index.pug
+++ b/views/app/notices/index.pug
@@ -4,54 +4,55 @@ block styles
 	//- link(href='https://fonts.googleapis.com/css?family=Quicksand', rel='stylesheet')
 	link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat:300")
 	link(rel="stylesheet", href="/css/organization.css")
+	link(rel="stylesheet", href="/css/notices.css")
 
 block title
 	title Bulletin Board | AirChat
 
 block content
+	.row(style="background:#F9C947")
+		h3.center.mont.white-text(style="margin:3% 0% 3% 0%") Notice Board		
+		.col.s12.m4.l3
+			img(src="/images/quote.png", alt="", width="400")
+		.col.s12.m8.l9
+			section#notices
+				.container
+					.card-panel.z-depth-4(style="border-radius:30px")
+						.card-panel.z-depth-2.center(v-for="notice in notices")(style="border-radius:30px")
+							h5.center.mont.strong(style="padding:0;margin:0;") 
+								|	{{ notice.title }}					
+							p.mont
+								|	{{notice.body}}
+							
 
-	section#notices
-		.container
-			h4.center.mont(style="margin:5% 0% 5% 0%") Notice Board
+				
 
-			.card-panel.z-depth-4(style="border-radius:30px")
-				.card-panel.z-depth-2.modal-trigger(href="#modaldetails")(v-for="notice in notices")(style="border-radius:30px")
-					h5.mont.strong(style="padding:0;margin:0;text-align:left") 
-						|	{{ notice.title }}					
 			
-
 		
-		//- .modal#modaldetails
-			.modal-content
-				p {{ notice.body }}
-				p A bunch of text
-			.modal-footer
-				a.modal-close.waves-effect.waves-green.btn-flat(href='#!') Agree
-
-			//- .row
-				.col.s12.center
-					.card-panel(style="margin-top:5%;border-radius:30px;")
-						ul.collapsible(v-for="notice in notices")(style="border-radius:30px")
-						
-							li(style="border-radius:30px;")
-								.collapsible-header.center(style="border-radius:30px")
-									.left
-										h4.center(style="padding:0;margin:0") 
-											|	{{ notice.title }}									
-										p.center(style="padding:0;margin:0") 
-											
-											img.responsive-img.circle(src="/images/face.png", alt="",width="30")
-											|	 {{ notice.from.name }} 
-								.collapsible-body
-									p {{ notice.body }}
-									p.right Posted by: {{ notice.from.name }} |{{ notice.date }}
-									p
-										a.btn(@click="deleteNotice(notice._id)")
-											i.material-icons.center.red-text close
+				//- .row
+					.col.s12.center
+						.card-panel(style="margin-top:5%;border-radius:30px;")
+							ul.collapsible(v-for="notice in notices")(style="border-radius:30px")
+							
+								li(style="border-radius:30px;")
+									.collapsible-header.center(style="border-radius:30px")
+										.left
+											h4.center(style="padding:0;margin:0") 
+												|	{{ notice.title }}									
+											p.center(style="padding:0;margin:0") 
+												
+												img.responsive-img.circle(src="/images/face.png", alt="",width="30")
+												|	 {{ notice.from.name }} 
+									.collapsible-body
+										p {{ notice.body }}
+										p.right Posted by: {{ notice.from.name }} |{{ notice.date }}
+										p
+											a.btn(@click="deleteNotice(notice._id)")
+												i.material-icons.center.red-text close
 
 
 
-	a.btn-floating.btn-large.waves-effect.waves-light.red.right
+	a.btn-floating.btn-large.waves-effect.waves-light.red.right(href="/notices/create")
 		i.material-icons add
 
 
