--- a/src/scss/organization.scss
+++ b/src/scss/organization.scss
@@ -1,3 +1,13 @@
+
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url(/fonts/lato.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 * {
     font-family: 'Lato', sans-serif;
 }
@@ -25,3 +35,27 @@ input[type="text"]:not(.browser-default).white-border {
   .breadcrumb.teal-text:last-child {
     color: #009688;
   }
+
+.suborganizations {
+	overflow: auto;
+	white-space: nowrap;
+
+	padding-left: 16px;
+
+	.suborganization {
+		display: inline-block;
+
+		.card-panel {
+			height: 70px;
+      width: 100px;
+		}
+
+		margin: 16px;
+		margin-left: 0px;
+		display: inline-block;
+	}
+}
+
+.suborganizations::-webkit-scrollbar {
+	width: 0px;
+}
